# santa-certificates

./: .gitignore  Makefile  README.md  generate_pdfs.sh  pyproject.toml  santa_certificates.py
assets/: wax_seal_b64.txt
templates/: certificate.html
